Add unknown license reference to package dereferencing #2965 #1379
There are unknown license statements like "This file is the same
license as the package django" which refers to a package which this
file is a part of. This is fixed by extending the dereferencing logic
to look for packages that the file belongs to and using the detected
licenses from the package.

Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/src/licensedcode/data/rules/ruby_or_lgpl-3.0-plus_3.yml
+++ b/src/licensedcode/data/rules/ruby_or_lgpl-3.0-plus_3.yml
@@ -2,4 +2,6 @@ license_expression: ruby OR lgpl-3.0-plus
 is_license_notice: yes
 relevance: 90
 minimum_coverage: 100
+referenced_filenames:
+   - package
 notes: this is found mostly in Ruby gettext
