--- a/src/licensedcode/data/rules/gpl-2.0_109.yml
+++ b/src/licensedcode/data/rules/gpl-2.0_109.yml
@@ -2,4 +2,6 @@ license_expression: gpl-2.0
 is_license_reference: yes
 relevance: 100
 minimum_coverage: 100
+referenced_filenames:
+   - package
 notes: cpufrequtils is gpl-2.0 only
