--- a/src/licensedcode/data/rules/lgpl-2.1-plus_283.yml
+++ b/src/licensedcode/data/rules/lgpl-2.1-plus_283.yml
@@ -2,3 +2,5 @@ license_expression: lgpl-2.1-plus
 is_license_notice: yes
 relevance: 100
 minimum_coverage: 100
+referenced_filenames:
+   - package
