--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/f/fusiondirectory/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/f/fusiondirectory/stable_copyright-detailed.expected.yml
@@ -10,6 +10,7 @@ declared_license:
   - GPL-2+
   - GPL-2+
   - GPL-2+
+  - GPL-2+
   - LGPL-3+
   - public-domain
   - GPL-2+
@@ -26,6 +27,7 @@ declared_license:
   - GPL-2+
   - GPL-2+
   - BSD-4-clause
+  - Expat
   - Expat
   - GPL-2+ or GPL-3+ or LGPL-2.1+ or LGPL-3+ or Expat or BSD-3-clause or BSD-4-clause
   - GPL-2+
@@ -40,30 +42,31 @@ declared_license_expression: (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus A
   AND free-unknown AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus) AND
   bsd-new AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus
   AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus)
-  AND (gpl-2.0-plus AND gpl-2.0-plus) AND free-unknown AND (lgpl-3.0-plus AND lgpl-3.0-plus)
-  AND other-permissive AND gpl-2.0-plus AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus
-  AND gpl-2.0-plus) AND mit AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus)
+  AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus) AND gpl-2.0-plus AND
+  (lgpl-3.0-plus AND lgpl-3.0-plus) AND other-permissive AND gpl-2.0-plus AND (gpl-2.0-plus
+  AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus) AND mit AND (gpl-2.0-plus AND gpl-2.0-plus)
   AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus
   AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus)
   AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus
-  AND gpl-2.0-plus) AND bsd-original AND mit AND ((gpl-2.0-plus AND gpl-2.0-plus) OR (gpl-3.0-plus
-  AND gpl-3.0-plus) OR (lgpl-2.1-plus AND lgpl-2.1-plus) OR (lgpl-3.0-plus AND lgpl-3.0-plus)
-  OR mit OR bsd-new OR bsd-original)
+  AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus) AND bsd-original AND mit AND mit AND
+  ((gpl-2.0-plus AND gpl-2.0-plus) OR (gpl-3.0-plus AND gpl-3.0-plus) OR (lgpl-2.1-plus AND
+  lgpl-2.1-plus) OR (lgpl-3.0-plus AND lgpl-3.0-plus) OR mit OR bsd-new OR bsd-original)
 declared_license_expression_spdx: (GPL-2.0-or-later AND GPL-2.0-or-later) AND (GPL-2.0-or-later
   AND GPL-2.0-or-later) AND LicenseRef-scancode-free-unknown AND (GPL-2.0-or-later AND GPL-2.0-or-later)
   AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND BSD-3-Clause AND (GPL-2.0-or-later AND GPL-2.0-or-later)
   AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND
   (GPL-2.0-or-later AND GPL-2.0-or-later) AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND (GPL-2.0-or-later
-  AND GPL-2.0-or-later) AND LicenseRef-scancode-free-unknown AND (LGPL-3.0-or-later AND LGPL-3.0-or-later)
-  AND LicenseRef-scancode-other-permissive AND GPL-2.0-or-later AND (GPL-2.0-or-later AND GPL-2.0-or-later)
-  AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND MIT AND (GPL-2.0-or-later AND GPL-2.0-or-later)
+  AND GPL-2.0-or-later) AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND GPL-2.0-or-later AND
+  (LGPL-3.0-or-later AND LGPL-3.0-or-later) AND LicenseRef-scancode-other-permissive AND GPL-2.0-or-later
+  AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND
+  MIT AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND (GPL-2.0-or-later AND GPL-2.0-or-later)
   AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND
   (GPL-2.0-or-later AND GPL-2.0-or-later) AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND (GPL-2.0-or-later
   AND GPL-2.0-or-later) AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND (GPL-2.0-or-later AND
-  GPL-2.0-or-later) AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND (GPL-2.0-or-later AND GPL-2.0-or-later)
-  AND BSD-4-Clause AND MIT AND ((GPL-2.0-or-later AND GPL-2.0-or-later) OR (GPL-3.0-or-later
-  AND GPL-3.0-or-later) OR (LGPL-2.1-or-later AND LGPL-2.1-or-later) OR (LGPL-3.0-or-later AND
-  LGPL-3.0-or-later) OR MIT OR BSD-3-Clause OR BSD-4-Clause)
+  GPL-2.0-or-later) AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND BSD-4-Clause AND MIT AND
+  MIT AND ((GPL-2.0-or-later AND GPL-2.0-or-later) OR (GPL-3.0-or-later AND GPL-3.0-or-later)
+  OR (LGPL-2.1-or-later AND LGPL-2.1-or-later) OR (LGPL-3.0-or-later AND LGPL-3.0-or-later)
+  OR MIT OR BSD-3-Clause OR BSD-4-Clause)
 other_license_expression:
 other_license_expression_spdx:
 license_detections:
@@ -72,8 +75,8 @@ license_detections:
       - not-combined
     matches:
       - score: '100.0'
-        start_line: 1472
-        end_line: 1472
+        start_line: 1523
+        end_line: 1523
         matched_length: 3
         match_coverage: '100.0'
         matcher: 1-hash
@@ -104,8 +107,8 @@ license_detections:
             spdx_license_key: GPL-2.0-or-later
             spdx_url: https://spdx.org/licenses/GPL-2.0-or-later
       - score: '100.0'
-        start_line: 1473
-        end_line: 1488
+        start_line: 1524
+        end_line: 1539
         matched_length: 136
         match_coverage: '100.0'
         matcher: 1-hash
@@ -157,8 +160,8 @@ license_detections:
       - not-combined
     matches:
       - score: '100.0'
-        start_line: 1490
-        end_line: 1490
+        start_line: 1541
+        end_line: 1541
         matched_length: 3
         match_coverage: '100.0'
         matcher: 1-hash
@@ -189,8 +192,8 @@ license_detections:
             spdx_license_key: GPL-3.0-or-later
             spdx_url: https://spdx.org/licenses/GPL-3.0-or-later
       - score: '100.0'
-        start_line: 1491
-        end_line: 1506
+        start_line: 1542
+        end_line: 1557
         matched_length: 136
         match_coverage: '100.0'
         matcher: 1-hash
@@ -242,8 +245,8 @@ license_detections:
       - not-combined
     matches:
       - score: '100.0'
-        start_line: 1508
-        end_line: 1508
+        start_line: 1559
+        end_line: 1559
         matched_length: 4
         match_coverage: '100.0'
         matcher: 1-hash
@@ -274,8 +277,8 @@ license_detections:
             spdx_license_key: LGPL-2.1-or-later
             spdx_url: https://spdx.org/licenses/LGPL-2.1-or-later
       - score: '100.0'
-        start_line: 1509
-        end_line: 1526
+        start_line: 1560
+        end_line: 1577
         matched_length: 146
         match_coverage: '100.0'
         matcher: 1-hash
@@ -329,8 +332,8 @@ license_detections:
       - not-combined
     matches:
       - score: '100.0'
-        start_line: 1529
-        end_line: 1545
+        start_line: 1580
+        end_line: 1596
         matched_length: 161
         match_coverage: '100.0'
         matcher: 1-hash
@@ -382,8 +385,8 @@ license_detections:
       - not-combined
     matches:
       - score: '100.0'
-        start_line: 1548
-        end_line: 1570
+        start_line: 1599
+        end_line: 1621
         matched_length: 213
         match_coverage: '100.0'
         matcher: 1-hash
@@ -441,8 +444,8 @@ license_detections:
       - not-combined
     matches:
       - score: '100.0'
-        start_line: 1573
-        end_line: 1598
+        start_line: 1624
+        end_line: 1649
         matched_length: 236
         match_coverage: '100.0'
         matcher: 1-hash
@@ -503,8 +506,8 @@ license_detections:
       - not-combined
     matches:
       - score: '100.0'
-        start_line: 1600
-        end_line: 1600
+        start_line: 1651
+        end_line: 1651
         matched_length: 3
         match_coverage: '100.0'
         matcher: 1-hash
@@ -535,8 +538,8 @@ license_detections:
             spdx_license_key: LGPL-3.0-or-later
             spdx_url: https://spdx.org/licenses/LGPL-3.0-or-later
       - score: '100.0'
-        start_line: 1601
-        end_line: 1612
+        start_line: 1652
+        end_line: 1663
         matched_length: 105
         match_coverage: '100.0'
         matcher: 1-hash
@@ -584,8 +587,8 @@ license_detections:
       - not-combined
     matches:
       - score: '100.0'
-        start_line: 1615
-        end_line: 1618
+        start_line: 1666
+        end_line: 1669
         matched_length: 40
         match_coverage: '100.0'
         matcher: 1-hash
@@ -620,24 +623,26 @@ license_detections:
             spdx_license_key: LicenseRef-scancode-other-permissive
             spdx_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/other-permissive.LICENSE
   - license_expression: free-unknown
-    detection_rules: []
+    detection_rules:
+      - not-combined
     matches:
-      - score: '90.0'
-        start_line: 401
-        end_line: 401
+      - score: '100.0'
+        start_line: 413
+        end_line: 413
         matched_length: 12
         match_coverage: '100.0'
         matcher: 1-hash
         license_expression: free-unknown
-        rule_identifier: free-unknown_80.RULE
-        referenced_filenames: []
+        rule_identifier: free-unknown-package_2.RULE
+        referenced_filenames:
+          - package
         is_license_text: no
-        is_license_notice: yes
-        is_license_reference: no
+        is_license_notice: no
+        is_license_reference: yes
         is_license_tag: no
         is_license_intro: no
         rule_length: 12
-        rule_relevance: 90
+        rule_relevance: 100
         matched_text: This file is distributed under the same license as the PACKAGE package.
         licenses:
           - key: free-unknown
@@ -654,48 +659,49 @@ license_detections:
             scancode_data_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/free-unknown.yml
             spdx_license_key: LicenseRef-scancode-free-unknown
             spdx_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/free-unknown.LICENSE
-  - license_expression: free-unknown
-    detection_rules: []
+  - license_expression: gpl-2.0-plus
+    detection_rules:
+      - not-combined
     matches:
-      - score: '82.5'
-        start_line: 539
-        end_line: 539
+      - score: '80.0'
+        start_line: 562
+        end_line: 562
         matched_length: 11
         match_coverage: '100.0'
-        matcher: 1-hash
-        license_expression: free-unknown
-        rule_identifier: free-unknown_79.RULE
-        referenced_filenames: []
+        matcher: 2-aho
+        license_expression: gpl-2.0-plus
+        rule_identifier: gpl-2.0-plus_1070.RULE
+        referenced_filenames:
+          - package
         is_license_text: no
-        is_license_notice: yes
-        is_license_reference: no
+        is_license_notice: no
+        is_license_reference: yes
         is_license_tag: no
         is_license_intro: no
         rule_length: 11
-        rule_relevance: 90
+        rule_relevance: 80
         matched_text: This file is distributed under the same license as the fusiondirectory
-          package.
         licenses:
-          - key: free-unknown
-            name: Free unknown license detected but not recognized
-            short_name: Free unknown
-            category: Unstated License
+          - key: gpl-2.0-plus
+            name: GNU General Public License 2.0 or later
+            short_name: GPL 2.0 or later
+            category: Copyleft
             is_exception: no
-            is_unknown: yes
-            owner: Unspecified
-            homepage_url:
-            text_url:
-            reference_url: https://scancode-licensedb.aboutcode.org/free-unknown
-            scancode_text_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/free-unknown.LICENSE
-            scancode_data_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/free-unknown.yml
-            spdx_license_key: LicenseRef-scancode-free-unknown
-            spdx_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/free-unknown.LICENSE
+            is_unknown: no
+            owner: Free Software Foundation (FSF)
+            homepage_url: http://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html
+            text_url: http://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html
+            reference_url: https://scancode-licensedb.aboutcode.org/gpl-2.0-plus
+            scancode_text_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/gpl-2.0-plus.LICENSE
+            scancode_data_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/gpl-2.0-plus.yml
+            spdx_license_key: GPL-2.0-or-later
+            spdx_url: https://spdx.org/licenses/GPL-2.0-or-later
   - license_expression: gpl-2.0-plus
     detection_rules: []
     matches:
       - score: '100.0'
-        start_line: 1076
-        end_line: 1076
+        start_line: 1099
+        end_line: 1099
         matched_length: 2
         match_coverage: '100.0'
         matcher: 2-aho
@@ -727,50 +733,42 @@ license_detections:
             spdx_url: https://spdx.org/licenses/GPL-2.0-or-later
 other_license_detections: []
 copyright: |
-  2011-2016, FusionDirectory
-  2011-2017, FusionDirectory
   2011-2018, FusionDirectory
-  2012-2016, FusionDirectory
-  2012-2017, FusionDirectory
-  2013-2016, FusionDirectory
-  2013-2016, FusionDirectory
-  2013-2017, FusionDirectory
+  2012-2018, FusionDirectory
+  2012-2019, FusionDirectory
+  2013-2018, FusionDirectory
   2014-2016, FusionDirectory
+  2014-2018, FusionDirectory
   2015-2016, FusionDirectory
-  2015-2017, FusionDirectory
-  2016, FusionDirectory
-  2016-2017, FusionDirectory
-  2017, FusionDirectory
+  2015-2018, FusionDirectory
+  2016-2018, FusionDirectory
   2017-2018, FusionDirectory
   2018, FusionDirectory
   2003, Cajus Pollmeier
   2003-2010, Cajus Pollmeier
-  2011-2015, FusionDirectory
   2011-2016, FusionDirectory
   2011-2018, FusionDirectory
-  2012-2016, FusionDirectory
   2007, Fabian Hickert
-  2011-2016, FusionDirectory
+  2011-2018, FusionDirectory
   2005-2009, Cajus Pollmeier
   2005-2009, Thomas Lange
   2001-2003, PGP Corporation
   2014-2015, Dhatim
   2014-2016, FusionDirectory
+  2011-2019, FusionDirectory
   2010, Antoine Gallavardin
   2010-2012, Antoine Gallavardin
-  2011-2016, FusionDirectory
-  2012-2016, FusionDirectory
-  2012-2017, FusionDirectory
-  2013-2016, FusionDirectory
+  2011-2018, FusionDirectory
+  2012-2019, FusionDirectory
   2010, Antoine Gallavardin
   2010-2012, Antoine Gallavardin
-  2011-2016, FusionDirectory
-  2012-2016, FusionDirectory
-  2013-2016, FusionDirectory
-  2011, Alejandro Escanero Blanco (aescanero@gmail.com)
-  2011-2016, FusionDirectory
+  2011-2018, FusionDirectory
+  2012-2018, FusionDirectory
+  2013-2018, FusionDirectory
+  2011, Alejandro Escanero Blanco
+  2011-2018, FusionDirectory
   2003-2009, GONICUS GmbH
-  2011-2016, FusionDirectory
+  2011-2018, FusionDirectory
   2012, WILLIAME Jeremy
   FusionDirectory Project
   2014, Uri Herrera <uri_herrera@nitrux.in>
@@ -786,33 +784,34 @@ copyright: |
   Jakub Steiner <jimmac@novell.com>
   *No copyright*
   2007, Sergio Vaccaro <sergio@inservibile.org>
-  2012-2016, FusionDirectory
+  2012-2018, FusionDirectory
   2013-2018, FusionDirectory
   2006, Steve Moitozo <god at zilla dot us>
-  1998, Eric Kilfoil <eric@ipass.net>
-  2003, Alejandro Escanero Blanco <aescanero@chaosdimension.org>
+  1998, Eric Kilfoil
+  2003, Alejandro Escanero Blanco
   2003-2010, Cajus Pollmeier
-  2011-2016, FusionDirectory
+  2011-2018, FusionDirectory
   2009-2010, Bas Tichelaar
-  2013-2016, FusionDirectory
+  2013-2018, FusionDirectory
   2005, Benoit Mortier
-  2011-2016, FusionDirectory
+  2011-2018, FusionDirectory
   2005, Guillame Delecourt
   2006, Benoit Mortier
   2006, Vincent Seynhaeve
-  2011-2016, FusionDirectory
+  2011-2018, FusionDirectory
   2014-2015, Dhatim
-  2014-2016, FusionDirectory project
+  2014-2018, FusionDirectory project
   2007, Fabian Hicker
-  2011-2016, FusionDirectory
+  2011-2018, FusionDirectory
   2003, Wouter Verhelst <wouter@debian.org>
-  2012-2016, FusionDirectory
+  2012-2018, FusionDirectory
   2004, - 2006, Roland Gruber
-  2013-2016, FusionDirectory Project
-  2015-2016, OpenSides <benoit.mortier@opensides.be>
+  2013-2018, FusionDirectory Project
+  2015-2018, OpenSides <benoit.mortier@opensides.be>
   2001, Dan Ellis
   2001, Dan Ellis <danellis@rushmore.com>
   2004, Knallgrau New Medias Solutions GmbH, Vienna - Austria
   2007, Mathieu Jondet <mathieu@eulerian.com>
+  2015, Terrill Dent, http://terrill.ca
   2010, Benoit Mortier <benoit.mortier@opensides.be>
   2014, Mike Gabriel <sunweaver@debian.org>
