--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,9 @@ jobs:
                   --ignore=tests/licensedcode/test_detection_datadriven1.py \
                   --ignore=tests/licensedcode/test_detection_datadriven2.py \
                   --ignore=tests/licensedcode/test_detection_datadriven3.py \
-                  --ignore=tests/licensedcode/test_detection_datadriven4.py
+                  --ignore=tests/licensedcode/test_detection_datadriven4.py \
+                  --ignore=tests/licensedcode/test_additional_license.py \
+                  tests/licensedcode
 
               license_datadriven1_2: |
                 venv/bin/pytest -n 3 -vvs --test-suite=all \
