Update license clues heuristics
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/m/mariadb-10.3/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/m/mariadb-10.3/stable_copyright-detailed.expected.yml
@@ -902,7 +902,8 @@ other_license_detections:
             spdx_license_key: LGPL-2.0-only
             spdx_url: https://spdx.org/licenses/LGPL-2.0-only
   - license_expression: bsd-new
-    detection_log: []
+    detection_log:
+      - license-clues
     matches:
       - score: '53.47'
         start_line: 925
@@ -1201,7 +1202,8 @@ other_license_detections:
             spdx_license_key: Artistic-1.0-Perl
             spdx_url: https://spdx.org/licenses/Artistic-1.0-Perl
   - license_expression: public-domain
-    detection_log: []
+    detection_log:
+      - not-combined
     matches:
       - score: '100.0'
         start_line: 1091
