--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/a/asterisk/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/a/asterisk/stable_copyright-detailed.expected.yml
@@ -1369,7 +1369,8 @@ other_license_detections:
             spdx_license_key: GPL-1.0-or-later
             spdx_url: https://spdx.org/licenses/GPL-1.0-or-later
   - license_expression: unknown
-    detection_log: []
+    detection_log:
+      - unknown-match
     matches:
       - score: '100.0'
         start_line: 178
@@ -1445,7 +1446,8 @@ other_license_detections:
             spdx_license_key: LicenseRef-scancode-free-unknown
             spdx_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/free-unknown.LICENSE
   - license_expression: unknown
-    detection_log: []
+    detection_log:
+      - unknown-match
     matches:
       - score: '100.0'
         start_line: 247
