--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/f/fusiondirectory/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/f/fusiondirectory/stable_copyright-detailed.expected.yml
@@ -698,7 +698,8 @@ license_detections:
             spdx_license_key: LicenseRef-scancode-free-unknown
             spdx_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/free-unknown.LICENSE
   - license_expression: gpl-2.0-plus
-    detection_log: []
+    detection_log:
+      - not-combined
     matches:
       - score: '100.0'
         start_line: 1099
