--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/perl/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/perl/copyright-detailed.expected.yml
@@ -1906,7 +1906,8 @@ other_license_detections:
             spdx_license_key: LicenseRef-scancode-other-copyleft
             spdx_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/other-copyleft.LICENSE
   - license_expression: public-domain
-    detection_log: []
+    detection_log:
+      - not-combined
     matches:
       - score: '100.0'
         start_line: 2569
@@ -7192,7 +7193,8 @@ other_license_detections:
             spdx_license_key: Artistic-1.0-Perl
             spdx_url: https://spdx.org/licenses/Artistic-1.0-Perl
   - license_expression: artistic-perl-1.0 OR gpl-1.0-plus
-    detection_log: []
+    detection_log:
+      - license-clues
     matches:
       - score: '56.14'
         start_line: 908
@@ -11180,7 +11182,8 @@ other_license_detections:
             spdx_license_key: GPL-1.0-or-later
             spdx_url: https://spdx.org/licenses/GPL-1.0-or-later
   - license_expression: artistic-1.0
-    detection_log: []
+    detection_log:
+      - not-combined
     matches:
       - score: '90.0'
         start_line: 1687
