Update docstrings and improve readability
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/f/fusiondirectory/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/f/fusiondirectory/stable_copyright-detailed.expected.yml
@@ -636,7 +636,7 @@ license_detections:
         rule_identifier: free-unknown-package_2.RULE
         rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/free-unknown-package_2.RULE
         referenced_filenames:
-          - package
+          - INHERIT_LICENSE_FROM_PACKAGE
         is_license_text: no
         is_license_notice: no
         is_license_reference: yes
@@ -673,7 +673,7 @@ license_detections:
         rule_identifier: free-unknown-package_1.RULE
         rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/free-unknown-package_1.RULE
         referenced_filenames:
-          - package
+          - INHERIT_LICENSE_FROM_PACKAGE
         is_license_text: no
         is_license_notice: no
         is_license_reference: yes
