Ambiguous Detections Review [WIP] #3122
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -191,6 +191,7 @@ scancode_post_scan =
     filter-clues = cluecode.plugin_filter_clues:RedundantCluesFilter
     consolidate = summarycode.plugin_consolidate:Consolidator
     licenses-reference = licensedcode.plugin_licenses_reference:LicensesReference
+    review = summarycode.review:AmbiguousDetectionsReviewPlugin
 
 
 # scancode_output_filter is the entry point for filter plugins executed after
