--- a/tests/formattedcode/data/yaml/simple-expected.yaml
+++ b/tests/formattedcode/data/yaml/simple-expected.yaml
@@ -14,7 +14,7 @@ headers:
       for any legal advice.
       ScanCode is a free software code scanning tool from nexB Inc. and others.
       Visit https://github.com/nexB/scancode-toolkit/ for support and download.
-    output_format_version: 2.0.0
+    output_format_version: 3.0.0
     message:
     errors: []
     warnings: []
@@ -22,11 +22,12 @@ headers:
       system_environment:
         operating_system: linux
         cpu_architecture: 64
-        platform: Linux-5.14.0-1045-oem-x86_64-with-glibc2.29
-        platform_version: '#51-Ubuntu SMP Mon Jul 4 06:41:22 UTC 2022'
+        platform: Linux-5.14.0-1054-oem-x86_64-with-glibc2.29
+        platform_version: '#61-Ubuntu SMP Fri Oct 14 13:05:50 UTC 2022'
         python_version: "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
       spdx_license_list_version: '3.17'
       files_count: 1
+licenses: []
 dependencies: []
 packages: []
 files:
@@ -53,6 +54,7 @@ files:
     license_detections: []
     license_clues: []
     percentage_of_license_text: '0'
+    for_licenses: []
     copyrights: []
     holders: []
     authors: []
@@ -85,6 +87,7 @@ files:
     license_detections: []
     license_clues: []
     percentage_of_license_text: '0'
+    for_licenses: []
     copyrights:
       - copyright: Copyright (c) 2000 ACME, Inc.
         start_line: 1
