Add CI job to test build and run with Docker
The test should ensure that scancode-toolkit is capable of
being built successfully using Docker. Additionally, the built
script should run successfully.

Signed-off-by: Abhishek Kumar <abhi.kr.2100@gmail.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,10 +13,10 @@ jobs:
 ################################################################################
 
 
-- job: test_build_and_scan_with_docker
+- job: test_build_and_run_with_docker
   steps:
     - task: Docker@2
-      displayName: Check that building using Docker succeeds
+      displayName: Check that building and running using Docker succeeds
       inputs:
         command: 'build'
         Dockerfile: '**/Dockerfile'
@@ -24,8 +24,9 @@ jobs:
           'scancode-toolkit'
           'scancode-toolkit:$(Build.BuildId)'
     - script: |
-        docker scan scancode-toolkit:$(Build.BuildId)
-      displayName: 'Scan image'
+        docker run -v $PWD/:/project scancode-toolkit -clipeu \
+          --json-pp /project/scan-result.json /project/apache-2.0.LICENSE
+      displayName: 'Test run'
 
 
 ################################################################################
