Align setup-mini.cfg with setup.cfg
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -75,7 +75,7 @@ install_requires =
     fasteners
     fingerprints >= 0.6.0
     ftfy >=  6.0.0
-    gemfileparser >= 0.7.0
+    gemfileparser2 >= 0.9.0
     html5lib
     importlib_metadata
     intbitset >= 3.0.0
@@ -101,6 +101,7 @@ install_requires =
     pygmars >= 0.7.0
     pygments
     pymaven_patch >= 0.2.8
+    python-frontmatter >= 1.0.0
     requests >= 2.7.0
     saneyaml >= 0.5.2
     spdx_tools >= 0.7.0a3
@@ -158,7 +159,7 @@ console_scripts =
 scancode_pre_scan =
     ignore = scancode.plugin_ignore:ProcessIgnore
     facet = summarycode.facet:AddFacet
-    classify = summarycode.classify:FileClassifier
+    classify = summarycode.classify_plugin:FileClassifier
 
 
 # scancode_scan is the entry point for scan plugins that run a scan after the
