--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -80,7 +80,7 @@ install_requires =
     gemfileparser2 >= 0.9.0
     html5lib
     importlib_metadata
-    intbitset >= 3.0.2 
+    intbitset >= 3.0.2
     jaraco.functools
     javaproperties >= 0.5
     jinja2 >= 2.7.0
@@ -105,7 +105,7 @@ install_requires =
     pymaven_patch >= 0.2.8
     requests >= 2.7.0
     saneyaml >= 0.6.0
-    spdx_tools == 0.7.0a3
+    spdx_tools == 0.7.0rc0, ==0.7.*
     text_unidecode >= 1.0
     toml >= 0.10.0
     urlpy
