Update synclic script and misc test expectations
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/licensedcode/data/datadriven/external/glc/BSD-2-Clause.t2.yml
+++ b/tests/licensedcode/data/datadriven/external/glc/BSD-2-Clause.t2.yml
@@ -1,6 +1,6 @@
 license_expressions:
   - unknown-license-reference
-  - bsd-simplified
+  - libutil-david-nugent
   - bsd-simplified
 notes: |
   License test derived from a file of the BSD-licensed repository at:
