--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/g/gnupg2/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/g/gnupg2/stable_copyright-detailed.expected.yml
@@ -30,11 +30,11 @@ other_license_expression: (gpl-3.0-plus AND gpl-3.0-plus) AND (gpl-3.0-plus AND 
   AND (lgpl-3.0-plus AND lgpl-3.0-plus) AND (gpl-3.0-plus AND gpl-3.0-plus) AND ietf AND bsd-new
   AND (gpl-3.0-plus AND gpl-3.0-plus) AND (cc0-1.0 AND cc0-1.0) AND other-permissive
 other_license_expression_spdx: (GPL-3.0-or-later AND GPL-3.0-or-later) AND (GPL-3.0-or-later
-  AND GPL-3.0-or-later) AND LicenseRef-scancode-fsf-unlimited-no-warranty AND LicenseRef-scancode-fsf-unlimited-no-warranty
-  AND (LGPL-2.1-or-later AND LGPL-2.1-or-later) AND MIT AND (GPL-3.0-or-later AND GPL-3.0-or-later)
-  AND ((GPL-3.0-or-later AND GPL-3.0-or-later) OR BSD-3-Clause) AND (LGPL-3.0-or-later AND LGPL-3.0-or-later)
-  AND (GPL-3.0-or-later AND GPL-3.0-or-later) AND LicenseRef-scancode-ietf AND BSD-3-Clause
-  AND (GPL-3.0-or-later AND GPL-3.0-or-later) AND (CC0-1.0 AND CC0-1.0) AND LicenseRef-scancode-other-permissive
+  AND GPL-3.0-or-later) AND FSFULLRWD AND FSFULLRWD AND (LGPL-2.1-or-later AND LGPL-2.1-or-later)
+  AND MIT AND (GPL-3.0-or-later AND GPL-3.0-or-later) AND ((GPL-3.0-or-later AND GPL-3.0-or-later)
+  OR BSD-3-Clause) AND (LGPL-3.0-or-later AND LGPL-3.0-or-later) AND (GPL-3.0-or-later AND GPL-3.0-or-later)
+  AND LicenseRef-scancode-ietf AND BSD-3-Clause AND (GPL-3.0-or-later AND GPL-3.0-or-later)
+  AND (CC0-1.0 AND CC0-1.0) AND LicenseRef-scancode-other-permissive
 license_detections: []
 other_license_detections:
   - license_expression: bsd-new
@@ -141,8 +141,8 @@ other_license_detections:
             text_url: http://www.fsf.org/licensing/licenses/
             reference_url: https://scancode-licensedb.aboutcode.org/fsf-unlimited-no-warranty
             scancode_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/fsf-unlimited-no-warranty.LICENSE
-            spdx_license_key: LicenseRef-scancode-fsf-unlimited-no-warranty
-            spdx_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/fsf-unlimited-no-warranty.LICENSE
+            spdx_license_key: FSFULLRWD
+            spdx_url: https://spdx.org/licenses/FSFULLRWD
   - license_expression: ietf
     detection_log:
       - not-combined
