--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/o/openldap/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/o/openldap/stable_copyright-detailed.expected.yml
@@ -3,8 +3,8 @@ declared_license_expression: openldap-2.8 AND openldap-2.8 AND mit AND fsf-unlim
   AND hs-regexp AND ibm-dhcp AND ietf AND isc AND other-permissive AND other-permissive AND
   mit-old-style-no-advert AND other-permissive AND hs-regexp AND openldap-2.8 AND bsla AND bsd-original-uc
   AND bsd-original-uc AND bsd-original-uc AND bsd-original-uc-1986
-declared_license_expression_spdx: OLDAP-2.8 AND OLDAP-2.8 AND MIT AND LicenseRef-scancode-fsf-unlimited-no-warranty
-  AND Spencer-94 AND LicenseRef-scancode-ibm-dhcp AND LicenseRef-scancode-ietf AND ISC AND LicenseRef-scancode-other-permissive
+declared_license_expression_spdx: OLDAP-2.8 AND OLDAP-2.8 AND MIT AND FSFULLRWD AND Spencer-94
+  AND LicenseRef-scancode-ibm-dhcp AND LicenseRef-scancode-ietf AND ISC AND LicenseRef-scancode-other-permissive
   AND LicenseRef-scancode-other-permissive AND NTP AND LicenseRef-scancode-other-permissive
   AND Spencer-94 AND OLDAP-2.8 AND LicenseRef-scancode-bsla AND BSD-4-Clause-UC AND BSD-4-Clause-UC
   AND BSD-4-Clause-UC AND LicenseRef-scancode-bsd-original-uc-1986
@@ -236,8 +236,8 @@ license_detections:
             text_url: http://www.fsf.org/licensing/licenses/
             reference_url: https://scancode-licensedb.aboutcode.org/fsf-unlimited-no-warranty
             scancode_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/fsf-unlimited-no-warranty.LICENSE
-            spdx_license_key: LicenseRef-scancode-fsf-unlimited-no-warranty
-            spdx_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/fsf-unlimited-no-warranty.LICENSE
+            spdx_license_key: FSFULLRWD
+            spdx_url: https://spdx.org/licenses/FSFULLRWD
   - license_expression: hs-regexp
     detection_log:
       - not-combined
