--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libgcrypt20/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libgcrypt20/copyright-detailed.expected.yml
@@ -6,12 +6,11 @@ declared_license_expression: gpl-1.0-plus AND other-permissive AND public-domain
   AND public-domain AND ocb-open-source-2013 AND ocb-open-source-2013 AND ocb-open-source-2013
   AND ocb-open-source-2013 AND gpl-2.0
 declared_license_expression_spdx: GPL-1.0-or-later AND LicenseRef-scancode-other-permissive
-  AND LicenseRef-scancode-public-domain AND LicenseRef-scancode-fsf-unlimited-no-warranty AND
-  (LGPL-2.1-or-later AND GPL-2.0-or-later) AND (LGPL-2.0-or-later AND GPL-2.0-or-later) AND
-  LGPL-2.0-or-later AND LGPL-2.1-or-later AND GPL-1.0-or-later AND GPL-2.0-or-later AND (LicenseRef-scancode-other-permissive
-  AND LicenseRef-scancode-other-copyleft) AND BSD-3-Clause AND BSD-3-Clause AND (BSD-3-Clause
-  OR GPL-1.0-or-later) AND X11 AND LicenseRef-scancode-public-domain AND LicenseRef-scancode-public-domain
-  AND LicenseRef-scancode-ocb-open-source-2013 AND LicenseRef-scancode-ocb-open-source-2013
+  AND LicenseRef-scancode-public-domain AND FSFULLRWD AND (LGPL-2.1-or-later AND GPL-2.0-or-later)
+  AND (LGPL-2.0-or-later AND GPL-2.0-or-later) AND LGPL-2.0-or-later AND LGPL-2.1-or-later AND
+  GPL-1.0-or-later AND GPL-2.0-or-later AND (LicenseRef-scancode-other-permissive AND LicenseRef-scancode-other-copyleft)
+  AND BSD-3-Clause AND BSD-3-Clause AND (BSD-3-Clause OR GPL-1.0-or-later) AND X11 AND LicenseRef-scancode-public-domain
+  AND LicenseRef-scancode-public-domain AND LicenseRef-scancode-ocb-open-source-2013 AND LicenseRef-scancode-ocb-open-source-2013
   AND LicenseRef-scancode-ocb-open-source-2013 AND LicenseRef-scancode-ocb-open-source-2013
   AND GPL-2.0-only
 other_license_expression:
@@ -157,8 +156,8 @@ license_detections:
             text_url: http://www.fsf.org/licensing/licenses/
             reference_url: https://scancode-licensedb.aboutcode.org/fsf-unlimited-no-warranty
             scancode_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/fsf-unlimited-no-warranty.LICENSE
-            spdx_license_key: LicenseRef-scancode-fsf-unlimited-no-warranty
-            spdx_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/fsf-unlimited-no-warranty.LICENSE
+            spdx_license_key: FSFULLRWD
+            spdx_url: https://spdx.org/licenses/FSFULLRWD
       - score: '100.0'
         start_line: 231
         end_line: 236
