--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libp11-kit0/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libp11-kit0/copyright-detailed.expected.yml
@@ -18,10 +18,9 @@ declared_license_expression_spdx: BSD-3-Clause
 other_license_expression: bsd-new AND fsf-unlimited-no-warranty AND bsd-new AND bsd-new AND
   mit AND isc AND (isc AND ibm-dhcp) AND bsd-new AND bsd-new AND bsd-new AND bsd-new AND bsd-new
   AND bsd-new AND bsd-new AND free-unknown
-other_license_expression_spdx: BSD-3-Clause AND LicenseRef-scancode-fsf-unlimited-no-warranty
-  AND BSD-3-Clause AND BSD-3-Clause AND MIT AND ISC AND (ISC AND LicenseRef-scancode-ibm-dhcp)
-  AND BSD-3-Clause AND BSD-3-Clause AND BSD-3-Clause AND BSD-3-Clause AND BSD-3-Clause AND BSD-3-Clause
-  AND BSD-3-Clause AND LicenseRef-scancode-free-unknown
+other_license_expression_spdx: BSD-3-Clause AND FSFULLRWD AND BSD-3-Clause AND BSD-3-Clause
+  AND MIT AND ISC AND (ISC AND LicenseRef-scancode-ibm-dhcp) AND BSD-3-Clause AND BSD-3-Clause
+  AND BSD-3-Clause AND BSD-3-Clause AND BSD-3-Clause AND BSD-3-Clause AND BSD-3-Clause AND LicenseRef-scancode-free-unknown
 license_detections: []
 other_license_detections:
   - license_expression: fsf-unlimited-no-warranty
@@ -66,8 +65,8 @@ other_license_detections:
             text_url: http://www.fsf.org/licensing/licenses/
             reference_url: https://scancode-licensedb.aboutcode.org/fsf-unlimited-no-warranty
             scancode_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/fsf-unlimited-no-warranty.LICENSE
-            spdx_license_key: LicenseRef-scancode-fsf-unlimited-no-warranty
-            spdx_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/licenses/fsf-unlimited-no-warranty.LICENSE
+            spdx_license_key: FSFULLRWD
+            spdx_url: https://spdx.org/licenses/FSFULLRWD
   - license_expression: isc
     detection_log:
       - not-combined
